--- a/src/app/screens/survey-list/survey-list.page.html
+++ b/src/app/screens/survey-list/survey-list.page.html
@@ -1,3 +1,26 @@
-<ion-content>
+<app-topbar></app-topbar>
 
+<ion-content class="ion-padding">
+    <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
+        <ion-refresher-content></ion-refresher-content>
+    </ion-refresher>
+
+    <ion-list lines="none" class="simple-list">
+        <ion-list-header>
+            <ion-label>
+                Pilih survey yang akan diisi:
+            </ion-label>
+        </ion-list-header>
+        <ion-item button="true" class="ion-margin" *ngFor="let survey of surveys">
+            <ion-label>
+                <ion-text>
+                    <h3 class="ion-text-wrap">
+                        <strong>
+                            {{ survey ? survey.title : '' }}
+                        </strong>
+                    </h3>
+                </ion-text>
+            </ion-label>
+        </ion-item>
+    </ion-list>
 </ion-content>
