--- a/src/app/screens/add-respondent/add-respondent.page.html
+++ b/src/app/screens/add-respondent/add-respondent.page.html
@@ -10,75 +10,155 @@
 </ion-header>
 
 <ion-content>
-  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
-    <ion-refresher-content></ion-refresher-content>
-  </ion-refresher>
+  <form [formGroup]="addRespondentForm" (submit)="onSubmit()">
 
-  <div class="upload-area ion-wrap ion-align-items-center ion-justify-content-center">
-    <ion-button color="light" shape="round" class="camera-trigger" (click)="addPhotoToGallery()">
-      <ion-icon name="camera" slot="icon-only" color="primary"></ion-icon>
-    </ion-button>
-    <ion-label color="medium upload-label">Choose photo</ion-label>
-  </div>
+    <div class="upload-area ion-wrap ion-align-items-center ion-justify-content-center">
+      <ion-button color="light" shape="round" class="camera-trigger" (click)="addPhotoToGallery()">
+        <ion-icon name="camera" slot="icon-only" color="primary"></ion-icon>
+      </ion-button>
+      <ion-label color="medium upload-label">Choose photo</ion-label>
+    </div>
+    
+    <ion-list class="field-list ion-margin ion-padding">
+      <ion-list-header>
+        <ion-label>
+          Profil Responden
+        </ion-label>
+      </ion-list-header>
+    
+      <ion-item>
+        <ion-label position="stacked">Nama</ion-label>
+        <ion-input name="name" formControlName="address" type="text" placeholder="Nama responden" required="true" autocomplete="off">
+        </ion-input>
+      </ion-item>
+    
+      <ion-item>
+        <ion-label position="stacked">Jenis Kelamin</ion-label>
+        <ion-select name="gender_id" formControlName="gender_id" interface="action-sheet" placeholder="Pilih jenis kelamin">
+          <ng-container *ngIf="addFormData && addFormData.genders">
+            <ion-select-option value="{{ gender.id }}" *ngFor="let gender of addFormData.genders">
+              {{ gender.name }}
+            </ion-select-option>
+          </ng-container>
+        </ion-select>
+      </ion-item>
+    
+      <ion-item>
+        <ion-label position="stacked">Usia</ion-label>
+        <ion-select name="age_range" formControlName="age_range" interface="action-sheet" placeholder="Pilih range usia">
+          <ion-select-option value="17 - 22">
+            ( 17 - 22 )
+          </ion-select-option>
+          <ion-select-option value="23 - 35">
+            ( 23 - 35 )
+          </ion-select-option>
+          <ion-select-option value="36 - 50">
+            ( 36 - 50 )
+          </ion-select-option>
+          <ion-select-option value=">50">
+            ( >50 )
+          </ion-select-option>
+        </ion-select>
+      </ion-item>
+    
+      <ion-item>
+        <ion-label position="stacked">Agama</ion-label>
+        <ion-select name="religion_id" formControlName="religion_id" interface="action-sheet" placeholder="Pilih agama">
+          <ng-container *ngIf="addFormData && addFormData.religions">
+            <ion-select-option value="{{ religion.id }}" *ngFor="let religion of addFormData.religions">
+              {{ religion.name }}
+            </ion-select-option>
+          </ng-container>
+        </ion-select>
+      </ion-item>
+    
+      <ion-item>
+        <ion-label position="stacked">Pendidikan</ion-label>
+        <ion-select name="education_id" formControlName="education_id" interface="action-sheet" placeholder="Pilih tingkat pendidikan">
+          <ng-container *ngIf="addFormData && addFormData.educations">
+            <ion-select-option value="{{ education.id }}" *ngFor="let education of addFormData.educations">
+              {{ education.name }}
+            </ion-select-option>
+          </ng-container>
+        </ion-select>
+      </ion-item>
+    
+      <ion-item>
+        <ion-label position="stacked">Pekerjaan</ion-label>
+        <ion-select name="job" formControlName="job" interface="action-sheet" placeholder="Pilih pekerjaan">
+          <ion-select-option value="ASN">
+            ASN
+          </ion-select-option>
+          <ion-select-option value="Wiraswasta">
+            Wiraswasta
+          </ion-select-option>
+          <ion-select-option value="Pegawai">
+            Pegawai
+          </ion-select-option>
+          <ion-select-option value="Pelajar/ Mahasiswa">
+            Pelajar/ Mahasiswa
+          </ion-select-option>
+          <ion-select-option value="Lain- lain">
+            Lain- lain
+          </ion-select-option>
+        </ion-select>
+      </ion-item>
+    
+      <ion-item>
+        <ion-label position="stacked">Penghasilan</ion-label>
+        <ion-select name="income_range" formControlName="income_range" interface="action-sheet" placeholder="Pilih range penghasilan">
+          <ion-select-option value="Rp. 0 - Rp. 1.500.000 ,00">
+            Rp. 0 - Rp. 1.500.000 ,00
+          </ion-select-option>
+          <ion-select-option value="Rp. 1.500.000 ,00 - Rp. 3.000.000 ,00">
+            Rp. 1.500.000 ,00 - Rp. 3.000.000 ,00
+          </ion-select-option>
+          <ion-select-option value="Rp. 3.000.000 ,00 - Rp. 6.000.000 ,00">
+            Rp. 3.000.000 ,00 - Rp. 6.000.000 ,00
+          </ion-select-option>
+          <ion-select-option value="> Rp. 6.000.000 ,00">
+            > Rp. 6.000.000 ,00
+          </ion-select-option>
+        </ion-select>
+      </ion-item>
+    
+      <ion-radio-group class="horizontal-radio-group">
+        <ion-item>
+          <ion-label position="stacked">Aktif di sosial media</ion-label>
+    
+          <ion-row>
+            <ion-col>
+              <ion-item lines="none">
+                <ion-radio name="active_on_social_media" formControlName="active_on_social_media" value="1"></ion-radio>
+                <ion-label>Ya</ion-label>
+              </ion-item>
+            </ion-col>
+    
+            <ion-col>
+              <ion-item lines="none">
+                <ion-radio name="active_on_social_media" formControlName="active_on_social_media" value="0"></ion-radio>
+                <ion-label>Tidak</ion-label>
+              </ion-item>
+            </ion-col>
+          </ion-row>
+    
+        </ion-item>
+      </ion-radio-group>
+    
+      <ion-item>
+        <ion-label position="stacked">Alamat</ion-label>
+        <ion-textarea name="address" formControlName="address" rows="3" required="true" placeholder="Masukkan alamat responden"></ion-textarea>
+      </ion-item>
+    
+    </ion-list>
 
-  <ion-list class="field-list ion-margin ion-padding">
-    <ion-list-header>
-      <ion-label>
-        Profil Responden
-      </ion-label>
-    </ion-list-header>
-
-    <ion-item>
-      <ion-label position="stacked">Kecamatan</ion-label>
-      <ion-select name="kecamatan" (ionChange)="onKecamatanChange($event)" interface="action-sheet"
-        placeholder="Pilih Kecamatan">
-        <ion-select-option value="{{ kecamatan.id }}" *ngFor="let kecamatan of kecamatans">
-          {{ kecamatan.name }}
-        </ion-select-option>
-      </ion-select>
-    </ion-item>
-
-    <ion-item>
-      <ion-label position="stacked">Kelurahan</ion-label>
-      <ion-select name="kelurahan" (ionChange)="onKelurahanChange($event)" interface="action-sheet"
-        placeholder="Pilih Kelurahan / Desa">
-        <ion-select-option value="{{ kelurahan.id }}" *ngFor="let kelurahan of kelurahans">
-          {{ kelurahan.name }}
-        </ion-select-option>
-      </ion-select>
-    </ion-item>
-
-    <ion-item>
-      <ion-label position="stacked">Nama Pedukuhan (Opsional)</ion-label>
-      <ion-input name="dukuh" type="text" placeholder="Nama pedukuhan sesuai TPS (bila ada)" autocomplete="off">
-      </ion-input>
-    </ion-item>
-
-    <ion-item>
-      <ion-label position="stacked">Nomor RW (Opsional)</ion-label>
-      <ion-select name="rw" (ionChange)="onRwChange($event)" interface="action-sheet"
-        placeholder="Nomor RW sesuai TPS (bila ada)">
-        <ion-select-option value="0">-</ion-select-option>
-        <ion-select-option value="{{ i + 1 }}" *ngFor="let item of [].constructor(100); let i = index">
-          {{ i + 1 }}
-        </ion-select-option>
-      </ion-select>
-    </ion-item>
-
-    <ion-item>
-      <ion-label position="stacked">Nomor TPS</ion-label>
-      <ion-select name="tps" (ionChange)="onTpsChange($event)" interface="action-sheet" placeholder="Pilih nomor TPS">
-        <ion-select-option value="{{ i + 1 }}" *ngFor="let item of [].constructor(70); let i = index">
-          {{ i + 1 }}
-        </ion-select-option>
-      </ion-select>
-    </ion-item>
-  </ion-list>
+  </form>
 </ion-content>
 
 <ion-footer class="footer-cta">
   <ion-toolbar>
-    <ion-button expand="full" color="secondary" (click)="createTps()" class="ion-no-margin footer-cta-button" size="default">
+    <ion-button expand="full" color="secondary" (click)="onSubmit()" class="ion-no-margin footer-cta-button"
+      size="default">
       <ion-icon slot="start" name="add-circle"></ion-icon>
       Tambah Responden
     </ion-button>
