can't use TopbarComponent :( convert it to manual way (write the topbar in every necessary page)

--- a/src/app/screens/respondent-list/respondent-list.page.html
+++ b/src/app/screens/respondent-list/respondent-list.page.html
@@ -1,4 +1,15 @@
-<app-topbar></app-topbar>
+<ion-header>
+  <ion-toolbar>
+    <ion-title>
+      <img src="assets/images/logo-blue.png" alt="Votty">
+    </ion-title>
+    <ion-buttons slot="end">
+      <ion-button color="secondary" (click)="logout()">
+        <ion-icon slot="icon-only" name="log-out-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-header>
 
 <ion-content class="ion-padding">
   <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
